# Collider

./: CMakeLists.txt  geometry_prova.txt  main.cxx  prova.ana  prova.reco  prova.sim
Core/include/: AnalysisManager.h  Event.h  InputManager.h  LinkDef.h  Particle.h  ProgressBar.h  ReconstructionManager.h  SimulationManager.h
Core/src/: AnalysisManager.cxx  Event.cxx  InputManager.cxx  ReconstructionManager.cxx  SimulationManager.cxx
Geometry/include/: Cylinder.h  Detector.h
Geometry/src/: Cylinder.cxx  Detector.cxx
Math/include/: Distributions.h  RandomManager.h
Math/src/: RandomManager.cxx
Transport/include/: LinearTransport.h  Transport.h
Transport/src/: LinearTransport.cxx  Transport.cxx
